// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatefulPrompt > should allow step modifications from effects 1`] = `
{
  "modifiedAspect": "messages",
  "modifiedItems": [
    {
      "content": "Modified message",
      "role": "system",
    },
  ],
  "stepModifierCalled": true,
  "steps": [
    {
      "activeTools": [],
      "input": {
        "prompt": [
          {
            "content": [
              {
                "text": "Original message",
                "type": "text",
              },
            ],
            "role": "user",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;

exports[`StatefulPrompt > should create state with defState 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Hello!",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Hello World",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`StatefulPrompt > should maintain state across re-executions 1`] = `
[
  {
    "activeTools": [
      "testTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Current count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "value": 1,
          },
          "toolCallId": "1",
          "toolName": "testTool",
          "type": "tool-call",
        },
        {
          "text": "First response",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "testTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Current count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Current count: 0",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "First response",
              "type": "text",
            },
            {
              "input": {
                "value": 1,
              },
              "toolCallId": "1",
              "toolName": "testTool",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "newCount": 1,
                  "success": true,
                },
              },
              "toolCallId": "1",
              "toolName": "testTool",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Second response",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`StatefulPrompt > should provide prompt context to effects 1`] = `
{
  "hasMessages": true,
  "hasSystems": true,
  "hasTools": true,
  "hasVariables": true,
  "lastTool": null,
  "stepNumber": 0,
}
`;

exports[`StatefulPrompt > should run effects with dependencies 1`] = `
{
  "effectRuns": [
    {
      "runCount": 1,
      "stateValue": 0,
      "stepNumber": 0,
    },
    {
      "runCount": 2,
      "stateValue": 0,
      "stepNumber": 0,
    },
  ],
  "finalDependency": 0,
  "steps": [
    {
      "activeTools": [],
      "input": {
        "prompt": [
          {
            "content": [
              {
                "text": "Starting with value: 0",
                "type": "text",
              },
            ],
            "role": "user",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;

exports[`StatefulPrompt > should run effects without dependencies on every step 1`] = `
{
  "runCount": 2,
  "stepNumbers": [
    0,
    0,
  ],
  "steps": [
    {
      "activeTools": [],
      "input": {
        "prompt": [
          {
            "content": [
              {
                "text": "Test message",
                "type": "text",
              },
            ],
            "role": "user",
          },
        ],
      },
      "output": {
        "content": [],
        "finishReason": "stop",
      },
    },
  ],
}
`;
